--- a/Proyecto_Ingenieria/.classpath
+++ b/Proyecto_Ingenieria/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="D:/usuarios/Victor/Documents/UE/Ingeniería Informática/Proyecto de Ingeniería/jfoenix-8.0.8.jar"/>
-	<classpathentry kind="lib" path="D:/usuarios/Victor/Documents/UE/DAM/Curso_1/SQLite Comando/sqlite-jdbc-3.20.0.jar"/>
+	<classpathentry kind="lib" path="librerias/jfoenix-8.0.8.jar"/>
+	<classpathentry kind="lib" path="librerias/sqlite-jdbc-3.20.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
